ran cells to show outputs

--- a/linear_algebra/determinants.ipynb
+++ b/linear_algebra/determinants.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-07-20T17:59:45.348803Z",
-     "start_time": "2024-07-20T17:59:43.925083Z"
+     "end_time": "2025-04-19T00:59:49.091894Z",
+     "start_time": "2025-04-19T00:59:49.088869Z"
     }
    },
    "source": [
@@ -21,7 +21,7 @@
     "from fractions import Fraction"
    ],
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 6
   },
   {
    "metadata": {},
@@ -35,8 +35,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-20T18:48:04.462608Z",
-     "start_time": "2024-07-20T18:48:04.459514Z"
+     "end_time": "2025-04-19T00:59:49.137875Z",
+     "start_time": "2025-04-19T00:59:49.135245Z"
     }
    },
    "cell_type": "code",
@@ -56,21 +56,21 @@
     {
      "data": {
       "text/plain": [
-       "np.float64(-3.0)"
+       "-3.0"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 41
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-20T18:50:34.492822Z",
-     "start_time": "2024-07-20T18:50:34.488713Z"
+     "end_time": "2025-04-19T00:59:49.197100Z",
+     "start_time": "2025-04-19T00:59:49.195035Z"
     }
    },
    "cell_type": "code",
@@ -91,15 +91,15 @@
     {
      "data": {
       "text/plain": [
-       "np.float64(93.0)"
+       "93.0"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 46
+   "execution_count": 8
   },
   {
    "metadata": {},
@@ -122,8 +122,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-20T20:55:47.917607Z",
-     "start_time": "2024-07-20T20:55:47.914523Z"
+     "end_time": "2025-04-19T00:59:49.252270Z",
+     "start_time": "2025-04-19T00:59:49.250811Z"
     }
    },
    "cell_type": "code",
@@ -135,13 +135,13 @@
    ],
    "id": "68acf8bb80d9cea3",
    "outputs": [],
-   "execution_count": 49
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-20T20:55:48.142982Z",
-     "start_time": "2024-07-20T20:55:48.139387Z"
+     "end_time": "2025-04-19T00:59:49.306847Z",
+     "start_time": "2025-04-19T00:59:49.305078Z"
     }
    },
    "cell_type": "code",
@@ -155,20 +155,25 @@
        "       [-1,  4]])"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 50
+   "execution_count": 10
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-19T00:59:49.389027Z",
+     "start_time": "2025-04-19T00:59:49.388028Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "",
-   "id": "9fa0fababc43ef63"
+   "id": "9fa0fababc43ef63",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
