--- a/linear_algebra/transformations.ipynb
+++ b/linear_algebra/transformations.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "id": "initial_id",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2025-04-19T00:54:41.453627Z",
+     "start_time": "2025-04-19T00:54:40.696249Z"
+    }
    },
    "source": [
     "import re\n",
@@ -17,7 +21,7 @@
     "from fractions import Fraction"
    ],
    "outputs": [],
-   "execution_count": null
+   "execution_count": 1
   },
   {
    "metadata": {},
@@ -34,12 +38,28 @@
    "id": "5be237fb4f4c2d55"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-19T00:54:41.775062Z",
+     "start_time": "2025-04-19T00:54:41.770831Z"
+    }
+   },
    "cell_type": "code",
    "source": "display(Math(r'T: \\space \\mathbb{R}^3 \\rightarrow \\mathbb{R}^3'))",
    "id": "bb1c9334f2f8e143",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ],
+      "text/latex": "$\\displaystyle T: \\space \\mathbb{R}^3 \\rightarrow \\mathbb{R}^3$"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "execution_count": 2
   },
   {
    "metadata": {},
@@ -52,15 +72,41 @@
    "id": "177f1b0a8ebe3dab"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-19T00:54:41.786999Z",
+     "start_time": "2025-04-19T00:54:41.782933Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "display(Math(r'T: \\space \\mathbb{R}^3 \\rightarrow \\mathbb{R}^2'))\n",
     "display(Math(r'T: \\space A: \\space domain \\to B: \\space codomain \\to \\space range'))"
    ],
    "id": "fab4b27b72c234ab",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ],
+      "text/latex": "$\\displaystyle T: \\space \\mathbb{R}^3 \\rightarrow \\mathbb{R}^2$"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ],
+      "text/latex": "$\\displaystyle T: \\space A: \\space domain \\to B: \\space codomain \\to \\space range$"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "execution_count": 3
   },
   {
    "metadata": {},
@@ -69,7 +115,12 @@
    "id": "a905265c266f915d"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-19T00:54:41.791331Z",
+     "start_time": "2025-04-19T00:54:41.789504Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "# Question 1\n",
@@ -80,21 +131,42 @@
    ],
    "id": "d75ed52f6da4433a",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 4
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-19T00:54:41.798534Z",
+     "start_time": "2025-04-19T00:54:41.795703Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "b = np.dot(Q, a)\n",
     "b"
    ],
    "id": "253268c94c22aa2e",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-42, -12])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 5
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-19T00:54:41.809552Z",
+     "start_time": "2025-04-19T00:54:41.806777Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "# Question 2\n",
@@ -113,18 +185,34 @@
    ],
    "id": "5bfab63d1fdae554",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 6
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-19T00:54:41.818734Z",
+     "start_time": "2025-04-19T00:54:41.815669Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "for row in a:\n",
     "    print(np.dot(P, row))"
    ],
    "id": "97a4c15a9046f6a3",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4 1]\n",
+      "[-2 10]\n",
+      "[-4 -4]\n",
+      "[ 6 -6]\n"
+     ]
+    }
+   ],
+   "execution_count": 7
   },
   {
    "metadata": {},
@@ -136,7 +224,12 @@
    "id": "4268569536739f47"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-19T00:54:41.830951Z",
+     "start_time": "2025-04-19T00:54:41.827039Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "def find_preimage(T, B_1):\n",
@@ -190,10 +283,15 @@
    ],
    "id": "f1b6ef75ba180ac9",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 8
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-19T00:54:41.836142Z",
+     "start_time": "2025-04-19T00:54:41.833454Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "# Question 1\n",
@@ -204,34 +302,184 @@
    ],
    "id": "d01e008f2133d603",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 9
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-19T00:54:41.847790Z",
+     "start_time": "2025-04-19T00:54:41.844702Z"
+    }
+   },
    "cell_type": "code",
    "source": "T_x",
    "id": "94b0dc4055f7de11",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1, -1],\n",
+       "       [ 0,  3]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 10
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-19T00:54:42.181079Z",
+     "start_time": "2025-04-19T00:54:42.167258Z"
+    }
+   },
    "cell_type": "code",
    "source": "find_preimage(T_x, B_1)",
    "id": "1c80ff66ddb75dc3",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Augmented Matrix -> T_x_B1_0:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ],
+      "text/latex": "$\\displaystyle \\left[\\begin{matrix}1 & -1 & 1\\\\0 & 3 & -2\\end{matrix}\\right]$"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Augmented Matrix -> T_x_B1_0_rref:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ],
+      "text/latex": "$\\displaystyle \\left[\\begin{matrix}1 & 0 & \\frac{1}{3}\\\\0 & 1 & - \\frac{2}{3}\\end{matrix}\\right]$"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--------------------------------------------------------------------------------\n",
+      "\n",
+      "RREF of the augmented matrices -> T_x_B1_1:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ],
+      "text/latex": "$\\displaystyle \\left[\\begin{matrix}1 & -1 & 3\\\\0 & 3 & 5\\end{matrix}\\right]$"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RREF of the augmented matrices -> T_x_B1_1_rref:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ],
+      "text/latex": "$\\displaystyle \\left[\\begin{matrix}1 & 0 & \\frac{14}{3}\\\\0 & 1 & \\frac{5}{3}\\end{matrix}\\right]$"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--------------------------------------------------------------------------------\n",
+      "\n",
+      "Pre-Image A1:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ],
+      "text/latex": "$\\displaystyle \\left[\\begin{matrix}\\frac{1}{3} & \\frac{14}{3}\\\\- \\frac{2}{3} & \\frac{5}{3}\\end{matrix}\\right]$"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Image B1:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ],
+      "text/latex": "$\\displaystyle \\left[\\begin{matrix}1 & 3\\\\-2 & 5\\end{matrix}\\right]$"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--------------------------------------------------------------------------------\n",
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 11
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-19T00:54:42.335316Z",
+     "start_time": "2025-04-19T00:54:42.332753Z"
+    }
+   },
    "cell_type": "code",
    "source": "# Question 2",
    "id": "ba57e6b9cbbec618",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 12
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-19T00:54:42.345069Z",
+     "start_time": "2025-04-19T00:54:42.342760Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "B_1 = ([-3, 0], [2, 2])\n",
@@ -240,34 +488,198 @@
    ],
    "id": "375fea7050fdb71d",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 13
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-19T00:54:42.355652Z",
+     "start_time": "2025-04-19T00:54:42.352449Z"
+    }
+   },
    "cell_type": "code",
    "source": "T_x",
    "id": "893c08986a95531f",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-2,  0],\n",
+       "       [ 1,  4]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 14
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-19T00:54:42.397133Z",
+     "start_time": "2025-04-19T00:54:42.387279Z"
+    }
+   },
    "cell_type": "code",
    "source": "find_preimage(T_x, B_1)",
    "id": "53ffa1b62b4aa801",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Augmented Matrix -> T_x_B1_0:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ],
+      "text/latex": "$\\displaystyle \\left[\\begin{matrix}-2 & 0 & -3\\\\1 & 4 & 0\\end{matrix}\\right]$"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Augmented Matrix -> T_x_B1_0_rref:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ],
+      "text/latex": "$\\displaystyle \\left[\\begin{matrix}1 & 0 & \\frac{3}{2}\\\\0 & 1 & - \\frac{3}{8}\\end{matrix}\\right]$"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--------------------------------------------------------------------------------\n",
+      "\n",
+      "RREF of the augmented matrices -> T_x_B1_1:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ],
+      "text/latex": "$\\displaystyle \\left[\\begin{matrix}-2 & 0 & 2\\\\1 & 4 & 2\\end{matrix}\\right]$"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RREF of the augmented matrices -> T_x_B1_1_rref:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ],
+      "text/latex": "$\\displaystyle \\left[\\begin{matrix}1 & 0 & -1\\\\0 & 1 & \\frac{3}{4}\\end{matrix}\\right]$"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--------------------------------------------------------------------------------\n",
+      "\n",
+      "Pre-Image A1:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ],
+      "text/latex": "$\\displaystyle \\left[\\begin{matrix}\\frac{3}{2} & -1\\\\- \\frac{3}{8} & \\frac{3}{4}\\end{matrix}\\right]$"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Image B1:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ],
+      "text/latex": "$\\displaystyle \\left[\\begin{matrix}-3 & 2\\\\0 & 2\\end{matrix}\\right]$"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--------------------------------------------------------------------------------\n",
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 15
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-19T00:54:42.709069Z",
+     "start_time": "2025-04-19T00:54:42.427303Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "print('Preimage A1 x2:')\n",
     "preimage_A1[\"x_02\"]"
    ],
    "id": "bb171d6bc5cc1ed2",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Preimage A1 x2:\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'preimage_A1' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
+      "\u001B[31mNameError\u001B[39m                                 Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[16]\u001B[39m\u001B[32m, line 2\u001B[39m\n\u001B[32m      1\u001B[39m \u001B[38;5;28mprint\u001B[39m(\u001B[33m'\u001B[39m\u001B[33mPreimage A1 x2:\u001B[39m\u001B[33m'\u001B[39m)\n\u001B[32m----> \u001B[39m\u001B[32m2\u001B[39m \u001B[43mpreimage_A1\u001B[49m[\u001B[33m\"\u001B[39m\u001B[33mx_02\u001B[39m\u001B[33m\"\u001B[39m]\n",
+      "\u001B[31mNameError\u001B[39m: name 'preimage_A1' is not defined"
+     ]
+    }
+   ],
+   "execution_count": 16
   },
   {
    "metadata": {},
