--- a/probability_statistics/permutations_and_combinations.ipynb
+++ b/probability_statistics/permutations_and_combinations.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-09-01T22:29:22.923833Z",
-     "start_time": "2024-09-01T22:29:22.921278Z"
+     "end_time": "2025-04-19T00:59:40.517127Z",
+     "start_time": "2025-04-19T00:59:40.513914Z"
     }
    },
    "source": [
@@ -23,7 +23,7 @@
     "from fractions import Fraction\n"
    ],
    "outputs": [],
-   "execution_count": 68
+   "execution_count": 27
   },
   {
    "metadata": {},
@@ -37,8 +37,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-01T22:29:22.944977Z",
-     "start_time": "2024-09-01T22:29:22.940886Z"
+     "end_time": "2025-04-19T00:59:40.534516Z",
+     "start_time": "2025-04-19T00:59:40.530831Z"
     }
    },
    "cell_type": "code",
@@ -51,18 +51,18 @@
        "True"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 69
+   "execution_count": 28
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-01T22:29:22.973472Z",
-     "start_time": "2024-09-01T22:29:22.969302Z"
+     "end_time": "2025-04-19T00:59:40.598533Z",
+     "start_time": "2025-04-19T00:59:40.595832Z"
     }
    },
    "cell_type": "code",
@@ -86,7 +86,7 @@
    ],
    "id": "c42db5b1278f3300",
    "outputs": [],
-   "execution_count": 70
+   "execution_count": 29
   },
   {
    "metadata": {},
@@ -100,8 +100,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-01T22:29:22.995281Z",
-     "start_time": "2024-09-01T22:29:22.992175Z"
+     "end_time": "2025-04-19T00:59:40.642965Z",
+     "start_time": "2025-04-19T00:59:40.640447Z"
     }
    },
    "cell_type": "code",
@@ -124,7 +124,7 @@
    ],
    "id": "ee8fb43ba46fef56",
    "outputs": [],
-   "execution_count": 71
+   "execution_count": 30
   },
   {
    "metadata": {},
@@ -138,8 +138,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-01T22:29:23.005376Z",
-     "start_time": "2024-09-01T22:29:23.002812Z"
+     "end_time": "2025-04-19T00:59:40.672694Z",
+     "start_time": "2025-04-19T00:59:40.670115Z"
     }
    },
    "cell_type": "code",
@@ -162,13 +162,13 @@
    ],
    "id": "e2d2452c77eb0082",
    "outputs": [],
-   "execution_count": 72
+   "execution_count": 31
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-01T22:29:23.029190Z",
-     "start_time": "2024-09-01T22:29:23.022488Z"
+     "end_time": "2025-04-19T00:59:40.709438Z",
+     "start_time": "2025-04-19T00:59:40.704087Z"
     }
    },
    "cell_type": "code",
@@ -255,13 +255,13 @@
      ]
     }
    ],
-   "execution_count": 73
+   "execution_count": 32
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-01T22:29:23.058043Z",
-     "start_time": "2024-09-01T22:29:23.054007Z"
+     "end_time": "2025-04-19T00:59:40.858220Z",
+     "start_time": "2025-04-19T00:59:40.855223Z"
     }
    },
    "cell_type": "code",
@@ -299,13 +299,13 @@
      ]
     }
    ],
-   "execution_count": 74
+   "execution_count": 33
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-01T22:29:23.099148Z",
-     "start_time": "2024-09-01T22:29:23.095573Z"
+     "end_time": "2025-04-19T00:59:40.912544Z",
+     "start_time": "2025-04-19T00:59:40.909588Z"
     }
    },
    "cell_type": "code",
@@ -338,18 +338,18 @@
      "output_type": "stream",
      "text": [
       "Number of distinct letters: 11\n",
-      "Counts of each letter: {'H': 1, 'C': 1, 'A': 2, 'S': 1, 'E': 1, 'M': 2, 'T': 2, 'I': 1}\n",
+      "Counts of each letter: {'T': 2, 'A': 2, 'H': 1, 'I': 1, 'C': 1, 'S': 1, 'M': 2, 'E': 1}\n",
       "Number of distinguishable permutations: 4989600.0\n"
      ]
     }
    ],
-   "execution_count": 75
+   "execution_count": 34
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-01T22:29:23.134336Z",
-     "start_time": "2024-09-01T22:29:23.126042Z"
+     "end_time": "2025-04-19T00:59:40.974806Z",
+     "start_time": "2025-04-19T00:59:40.967493Z"
     }
    },
    "cell_type": "code",
@@ -363,7 +363,8 @@
     "\"\"\"\n",
     "\n",
     "# NOTE: If there are a limited number of slots for the permutation, we must use the 'multiplication counting principle'.\n",
-    "\n",
+    "n_people = 20\n",
+    "r_places = 3\n",
     "\n",
     "print(\"-\" * 80)\n",
     "display(Math(r\"P(n, k) = \\frac{n!}{(n-r)!}\"))\n",
@@ -409,7 +410,7 @@
       "text/plain": [
        "<IPython.core.display.Math object>"
       ],
-      "text/latex": "$\\displaystyle P(15, 3) = \\frac{15!}{ (15 - 3)!}$"
+      "text/latex": "$\\displaystyle P(20, 3) = \\frac{20!}{ (20 - 3)!}$"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -423,13 +424,13 @@
      ]
     }
    ],
-   "execution_count": 76
+   "execution_count": 35
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-01T22:29:23.180205Z",
-     "start_time": "2024-09-01T22:29:23.177126Z"
+     "end_time": "2025-04-19T00:59:41.017809Z",
+     "start_time": "2025-04-19T00:59:41.014694Z"
     }
    },
    "cell_type": "code",
@@ -460,13 +461,13 @@
      ]
     }
    ],
-   "execution_count": 77
+   "execution_count": 36
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-01T22:38:29.190546Z",
-     "start_time": "2024-09-01T22:38:29.188494Z"
+     "end_time": "2025-04-19T00:59:41.069880Z",
+     "start_time": "2025-04-19T00:59:41.067405Z"
     }
    },
    "cell_type": "code",
@@ -492,13 +493,13 @@
    ],
    "id": "1a40ca6d1086d85c",
    "outputs": [],
-   "execution_count": 88
+   "execution_count": 37
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-01T22:45:26.042848Z",
-     "start_time": "2024-09-01T22:45:26.038342Z"
+     "end_time": "2025-04-19T00:59:41.095003Z",
+     "start_time": "2025-04-19T00:59:41.091609Z"
     }
    },
    "cell_type": "code",
@@ -548,13 +549,13 @@
      ]
     }
    ],
-   "execution_count": 95
+   "execution_count": 38
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-01T22:29:23.338131Z",
-     "start_time": "2024-09-01T22:29:23.336090Z"
+     "end_time": "2025-04-19T00:59:41.160567Z",
+     "start_time": "2025-04-19T00:59:41.156926Z"
     }
    },
    "cell_type": "code",
@@ -568,14 +569,25 @@
     "\"\"\"\n"
    ],
    "id": "1fcba7991249df0d",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n\\nHow many ways are there of being dealt a 5 card hand out of a standard 52 card deck?\\n\\n'"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 39
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-01T23:35:41.460957Z",
-     "start_time": "2024-09-01T23:35:41.455817Z"
+     "end_time": "2025-04-19T00:59:41.205034Z",
+     "start_time": "2025-04-19T00:59:41.201418Z"
     }
    },
    "cell_type": "code",
@@ -600,20 +612,20 @@
      ]
     }
    ],
-   "execution_count": 102
+   "execution_count": 40
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-01T23:43:31.589037Z",
-     "start_time": "2024-09-01T23:43:31.585469Z"
+     "end_time": "2025-04-19T00:59:41.232169Z",
+     "start_time": "2025-04-19T00:59:41.228556Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# Contains exactly 1 ace?\n",
     "\n",
-    "n_aces = 4\n",
+    "_4C_1 = 4\n",
     "_n_acesC_1 = math.factorial(n_aces) / (math.factorial(n_aces - 1) * math.factorial(1))  # probability of drawing an ace\n",
     "print(f\"Number of ways to deal a 5 card hand with exactly 1 ace: {_n_acesC_1}\")\n",
     "_48C_4 = \\\n",
@@ -635,13 +647,13 @@
      ]
     }
    ],
-   "execution_count": 108
+   "execution_count": 41
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-01T23:56:30.574600Z",
-     "start_time": "2024-09-01T23:56:30.571205Z"
+     "end_time": "2025-04-19T00:59:41.271533Z",
+     "start_time": "2025-04-19T00:59:41.269132Z"
     }
    },
    "cell_type": "code",
@@ -649,7 +661,7 @@
     "# No Aces?\n",
     "\n",
     "_48C_5 = math.factorial(n_cards - n_aces) / (math.factorial((n_cards - n_aces) - 5)\n",
-    "                                        * math.factorial(5))  # probability of drawing 5 non-ace cards\n",
+    "                                             * math.factorial(5))  # probability of drawing 5 non-ace cards\n",
     "print(f\"Number of ways to deal a 5 card hand with no aces: {_48C_5}\")\n"
    ],
    "id": "4f5555bb24a0afe7",
@@ -662,13 +674,13 @@
      ]
     }
    ],
-   "execution_count": 110
+   "execution_count": 42
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-02T00:32:00.399619Z",
-     "start_time": "2024-09-02T00:32:00.395999Z"
+     "end_time": "2025-04-19T00:59:41.315160Z",
+     "start_time": "2025-04-19T00:59:41.311510Z"
     }
    },
    "cell_type": "code",
@@ -698,13 +710,13 @@
      ]
     }
    ],
-   "execution_count": 119
+   "execution_count": 43
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-02T00:39:20.388032Z",
-     "start_time": "2024-09-02T00:39:20.384455Z"
+     "end_time": "2025-04-19T00:59:41.353379Z",
+     "start_time": "2025-04-19T00:59:41.349677Z"
     }
    },
    "cell_type": "code",
@@ -735,13 +747,13 @@
      ]
     }
    ],
-   "execution_count": 126
+   "execution_count": 44
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-02T00:44:22.234095Z",
-     "start_time": "2024-09-02T00:44:22.230495Z"
+     "end_time": "2025-04-19T00:59:41.377510Z",
+     "start_time": "2025-04-19T00:59:41.374623Z"
     }
    },
    "cell_type": "code",
@@ -753,7 +765,8 @@
     "n_face_cards = 3 * 4  # There are 3 face cards of each of 4 suits\n",
     "total_cards = 52\n",
     "\n",
-    "_non_face_cardsC_4 = math.factorial(total_cards - n_face_cards) / (math.factorial(total_cards - n_face_cards - 5) * math.factorial(5))\n",
+    "_non_face_cardsC_4 = math.factorial(total_cards - n_face_cards) / (\n",
+    "        math.factorial(total_cards - n_face_cards - 5) * math.factorial(5))\n",
     "print(f\"Number of ways to deal a 5 card hand with 4 non-face cards: {_non_face_cardsC_4}\")"
    ],
    "id": "ee5d2b1380a3f22a",
@@ -766,15 +779,20 @@
      ]
     }
    ],
-   "execution_count": 129
+   "execution_count": 45
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-19T00:59:41.416534Z",
+     "start_time": "2025-04-19T00:59:41.414473Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "",
-   "id": "1be586e49697526d"
+   "id": "1be586e49697526d",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
