--- a/probability_statistics/regression.ipynb
+++ b/probability_statistics/regression.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-10-16T15:22:51.514533Z",
-     "start_time": "2024-10-16T15:22:46.444970Z"
+     "end_time": "2025-04-19T00:55:04.947738Z",
+     "start_time": "2025-04-19T00:55:03.457124Z"
     }
    },
    "source": [
@@ -35,8 +35,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-16T15:30:20.283038Z",
-     "start_time": "2024-10-16T15:30:20.280487Z"
+     "end_time": "2025-04-19T00:55:05.263368Z",
+     "start_time": "2025-04-19T00:55:05.260600Z"
     }
    },
    "cell_type": "code",
@@ -46,13 +46,13 @@
    ],
    "id": "e2dec430dee4c507",
    "outputs": [],
-   "execution_count": 16
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-16T15:32:40.692676Z",
-     "start_time": "2024-10-16T15:32:40.689033Z"
+     "end_time": "2025-04-19T00:55:05.281672Z",
+     "start_time": "2025-04-19T00:55:05.277087Z"
     }
    },
    "cell_type": "code",
@@ -71,31 +71,31 @@
        " 'x: 98, y: 1.372, sum: 134.45600000000002']"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 26
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-16T15:34:00.349656Z",
-     "start_time": "2024-10-16T15:34:00.347091Z"
+     "end_time": "2025-04-19T00:55:05.291789Z",
+     "start_time": "2025-04-19T00:55:05.289131Z"
     }
    },
    "cell_type": "code",
    "source": "sum_x_y = float(round(sum([x * y for x, y in zip(x,y)]), 5))",
    "id": "20cf79ff53f89bbe",
    "outputs": [],
-   "execution_count": 33
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-16T15:34:21.492010Z",
-     "start_time": "2024-10-16T15:34:21.489460Z"
+     "end_time": "2025-04-19T00:55:05.303239Z",
+     "start_time": "2025-04-19T00:55:05.300463Z"
     }
    },
    "cell_type": "code",
@@ -110,15 +110,20 @@
      ]
     }
    ],
-   "execution_count": 35
+   "execution_count": 5
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-19T00:55:05.310488Z",
+     "start_time": "2025-04-19T00:55:05.308243Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "",
-   "id": "913c9ed0e0467d2a"
+   "id": "913c9ed0e0467d2a",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
